--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pidusage",
-  "version": "3.0.0",
+  "version": "3.0.0b",
   "description": "Cross-platform process cpu % and memory usage of a PID",
   "license": "MIT",
   "homepage": "https://github.com/soyuka/pidusage",
@@ -18,7 +18,7 @@
     "index.js"
   ],
   "engines": {
-    "node": ">=10"
+    "node": ">=4.9"
   },
   "scripts": {
     "lint": "standard",
